test: expand project test coverage by adding comprehensive unit and integration test suites