@@ -1,24 +1,27 @@
 package nuri.business.service.file;
 
-import nuri.foundation.core.exception.BusinessException;
-import nuri.foundation.core.exception.ErrorCode;
-import nuri.foundation.core.storage.FileStorageService;
 import nuri.business.domain.file.FileDetail;
+import nuri.business.domain.file.FileDetailId;
 import nuri.business.domain.file.FileDetailRepository;
 import nuri.business.domain.file.FileMaster;
 import nuri.business.domain.file.FileMasterRepository;
 import nuri.business.service.file.dto.FileDto;
-import org.junit.jupiter.api.BeforeEach;
+import nuri.foundation.core.exception.BusinessException;
+import nuri.foundation.core.storage.FileStorageService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
+import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -26,11 +29,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("FileService 테스트")
 class FileServiceTest {
+
+    @InjectMocks
+    private FileService fileService;
 
     @Mock
     private FileMasterRepository fileMasterRepository;
@@ -41,212 +47,228 @@ class FileServiceTest {
     @Mock
     private FileStorageService storageService;
 
-    @InjectMocks
-    private FileService fileService;
-
-    private String atchFileId = "FILE_1234567890";
-    private FileMaster mockMaster;
-    private FileDetail mockDetail;
-
-    @BeforeEach
-    void setUp() {
-        mockMaster = FileMaster.builder().atchFileId(atchFileId).build();
-        mockDetail = FileDetail.builder()
-                .fileMaster(mockMaster)
-                .fileSn(1)
-                .fileStreCours("general/" + atchFileId)
-                .streFileNm("saved_file.txt")
-                .orignlFileNm("original_file.txt")
-                .fileExtsn("txt")
-                .fileMg(100L)
-                .build();
-    }
-
     @Test
-    @DisplayName("파일 업로드 테스트")
+    @DisplayName("파일 업로드 성공")
     void uploadFiles_Success() throws IOException {
-        // Given
-        MultipartFile multipartFile = mock(MultipartFile.class);
-        when(multipartFile.isEmpty()).thenReturn(false);
-        when(multipartFile.getOriginalFilename()).thenReturn("test.txt");
-        when(multipartFile.getSize()).thenReturn(100L);
-        when(storageService.store(any(MultipartFile.class), anyString())).thenReturn("stored_test.txt");
-        when(fileMasterRepository.save(any(FileMaster.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        // given
+        MockMultipartFile file = new MockMultipartFile("files", "test.jpg", "image/jpeg", "test content".getBytes());
+        List<MultipartFile> files = Collections.singletonList(file);
+        
+        FileMaster master = new FileMaster("FILE_123");
+        given(fileMasterRepository.save(any(FileMaster.class))).willReturn(master);
+        given(storageService.store(any(MultipartFile.class), anyString())).willReturn("stored_name.jpg");
 
-        // When
-        String resultId = fileService.uploadFiles(List.of(multipartFile));
+        // when
+        String atchFileId = fileService.uploadFiles(files);
 
-        // Then
-        assertThat(resultId).startsWith("FILE_");
-        verify(fileMasterRepository).save(any(FileMaster.class));
-        verify(fileDetailRepository).save(any(FileDetail.class));
-        verify(storageService).store(any(MultipartFile.class), anyString());
+        // then
+        assertThat(atchFileId).startsWith("FILE_");
+        verify(fileMasterRepository, times(1)).save(any(FileMaster.class));
+        verify(fileDetailRepository, times(1)).save(any(FileDetail.class));
+        verify(storageService, times(1)).store(any(MultipartFile.class), anyString());
     }
 
     @Test
-    @DisplayName("첨부파일 목록 조회 테스트")
-    void getFileList_Success() {
-        // Given
-        when(fileMasterRepository.findById(atchFileId)).thenReturn(Optional.of(mockMaster));
-        when(fileDetailRepository.findByFileMaster(mockMaster)).thenReturn(List.of(mockDetail));
+    @DisplayName("허용되지 않은 확장자 업로드 시 예외 발생")
+    void uploadFiles_InvalidExtension() {
+        // given
+        MockMultipartFile file = new MockMultipartFile("files", "test.exe", "application/octet-stream", "content".getBytes());
+        List<MultipartFile> files = Collections.singletonList(file);
 
-        // When
+        // when & then
+        assertThatThrownBy(() -> fileService.uploadFiles(files))
+                .isInstanceOf(BusinessException.class);
+    }
+
+    @Test
+    @DisplayName("파일 목록 조회")
+    void getFileList() {
+        // given
+        String atchFileId = "FILE_123";
+        FileMaster master = new FileMaster(atchFileId);
+        FileDetail detail = FileDetail.builder()
+                .fileMaster(master)
+                .fileSn(1)
+                .orignlFileNm("test.jpg")
+                .build();
+
+        given(fileMasterRepository.findById(atchFileId)).willReturn(Optional.of(master));
+        given(fileDetailRepository.findByFileMaster(master)).willReturn(Collections.singletonList(detail));
+
+        // when
         List<FileDto> result = fileService.getFileList(atchFileId);
 
-        // Then
+        // then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getOrignlFileNm()).isEqualTo("original_file.txt");
+        assertThat(result.get(0).getOrignlFileNm()).isEqualTo("test.jpg");
     }
 
     @Test
-    @DisplayName("파일 리소스 조회 테스트")
-    void getFileResource_Success() throws IOException {
-        // Given
-        Resource mockResource = mock(Resource.class);
-        when(fileDetailRepository.findById(any())).thenReturn(Optional.of(mockDetail));
-        when(storageService.loadAsResource(anyString(), anyString())).thenReturn(mockResource);
+    @DisplayName("파일 리소스 조회")
+    void getFileResource() throws IOException {
+        // given
+        String atchFileId = "FILE_123";
+        Integer fileSn = 1;
+        FileDetail detail = FileDetail.builder()
+                .streFileNm("stored.jpg")
+                .fileStreCours("path")
+                .build();
+        Resource resource = new ByteArrayResource("test".getBytes());
 
-        // When
-        Resource result = fileService.getFileResource(atchFileId, 1);
+        given(fileDetailRepository.findById(any(FileDetailId.class))).willReturn(Optional.of(detail));
+        given(storageService.loadAsResource("stored.jpg", "path")).willReturn(resource);
 
-        // Then
-        assertThat(result).isEqualTo(mockResource);
+        // when
+        Resource result = fileService.getFileResource(atchFileId, fileSn);
+
+        // then
+        assertThat(result).isNotNull();
     }
 
     @Test
-    @DisplayName("파일 전체 삭제 테스트")
-    void deleteFiles_Success() throws IOException {
-        // Given
-        when(fileMasterRepository.findById(atchFileId)).thenReturn(Optional.of(mockMaster));
-        when(fileDetailRepository.findByFileMaster(mockMaster)).thenReturn(List.of(mockDetail));
+    @DisplayName("파일 전체 삭제")
+    void deleteFiles() throws IOException {
+        // given
+        String atchFileId = "FILE_123";
+        FileMaster master = new FileMaster(atchFileId);
+        FileDetail detail = FileDetail.builder()
+                .streFileNm("stored.jpg")
+                .fileStreCours("path")
+                .build();
 
-        // When
+        given(fileMasterRepository.findById(atchFileId)).willReturn(Optional.of(master));
+        given(fileDetailRepository.findByFileMaster(master)).willReturn(Collections.singletonList(detail));
+
+        // when
         fileService.deleteFiles(atchFileId);
 
-        // Then
-        verify(storageService).delete(anyString(), anyString());
-        verify(fileMasterRepository).delete(mockMaster);
+        // then
+        verify(storageService, times(1)).delete("stored.jpg", "path");
+        verify(fileMasterRepository, times(1)).delete(master);
     }
 
     @Test
-    @DisplayName("파일 단건 삭제 테스트")
-    void deleteFile_Success() throws IOException {
-        // Given
-        when(fileDetailRepository.findById(any())).thenReturn(Optional.of(mockDetail));
+    @DisplayName("파일 단건 삭제")
+    void deleteFile() throws IOException {
+        // given
+        String atchFileId = "FILE_123";
+        Integer fileSn = 1;
+        FileDetail detail = FileDetail.builder()
+                .streFileNm("stored.jpg")
+                .fileStreCours("path")
+                .build();
 
-        // When
-        fileService.deleteFile(atchFileId, 1);
+        given(fileDetailRepository.findById(any(FileDetailId.class))).willReturn(Optional.of(detail));
 
-        // Then
-        verify(storageService).delete(anyString(), anyString());
-        verify(fileDetailRepository).delete(mockDetail);
+        // when
+        fileService.deleteFile(atchFileId, fileSn);
+
+        // then
+        verify(storageService, times(1)).delete("stored.jpg", "path");
+        verify(fileDetailRepository, times(1)).delete(detail);
     }
 
     @Test
-    @DisplayName("파일 상세 조회 테스트")
-    void getFileDetail_Success() {
-        // Given
-        when(fileDetailRepository.findById(any())).thenReturn(Optional.of(mockDetail));
+    @DisplayName("파일 수정 (추가 업로드)")
+    void updateFiles() throws IOException {
+        // given
+        String atchFileId = "FILE_123";
+        FileMaster master = new FileMaster(atchFileId);
+        FileDetail existingDetail = FileDetail.builder().fileSn(1).build();
+        MockMultipartFile newFile = new MockMultipartFile("files", "new.jpg", "image/jpeg", "content".getBytes());
 
-        // When
-        FileDto result = fileService.getFileDetail(atchFileId, 1);
+        given(fileMasterRepository.findById(atchFileId)).willReturn(Optional.of(master));
+        given(fileDetailRepository.findByFileMaster(master)).willReturn(Collections.singletonList(existingDetail));
+        given(storageService.store(any(MultipartFile.class), anyString())).willReturn("new_stored.jpg");
 
-        // Then
-        assertThat(result.getOrignlFileNm()).isEqualTo("original_file.txt");
+        // when
+        fileService.updateFiles(atchFileId, Collections.singletonList(newFile));
+
+        // then
+        verify(fileDetailRepository, times(1)).save(any(FileDetail.class));
     }
 
     @Test
-    @DisplayName("파일 상세 조회 실패 - 존재하지 않는 파일")
-    void getFileDetail_Fail_NotFound() {
-        // Given
-        when(fileDetailRepository.findById(any())).thenReturn(Optional.empty());
-
-        // When & Then
-        assertThatThrownBy(() -> fileService.getFileDetail(atchFileId, 1))
-                .isInstanceOf(BusinessException.class)
-                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.RESOURCE_NOT_FOUND);
-    }
-
-    @Test
-    @DisplayName("파일 업로드 테스트 - 빈 파일 포함")
-    void uploadFiles_WithEmptyFile_Success() throws IOException {
-        // Given
-        MultipartFile regularFile = mock(MultipartFile.class);
-        when(regularFile.isEmpty()).thenReturn(false);
-        when(regularFile.getOriginalFilename()).thenReturn("test.txt");
-        when(regularFile.getSize()).thenReturn(100L);
-        
-        MultipartFile emptyFile = mock(MultipartFile.class);
-        when(emptyFile.isEmpty()).thenReturn(true);
-
-        when(storageService.store(any(), anyString())).thenReturn("stored.txt");
-        when(fileMasterRepository.save(any())).thenReturn(mockMaster);
-
-        // When
-        fileService.uploadFiles(List.of(regularFile, emptyFile));
-
-        // Then
-        verify(storageService, times(1)).store(any(), anyString());
-        verify(fileDetailRepository, times(1)).save(any());
-    }
-
-    @Test
-    @DisplayName("첨부파일 목록 조회 테스트 - ID가 Null인 경우")
-    void getFileList_NullId_ReturnsEmpty() {
-        // When
+    @DisplayName("파일 목록 조회 - ID가 null인 경우 빈 목록 반환")
+    void getFileList_NullId() {
         List<FileDto> result = fileService.getFileList(null);
-
-        // Then
         assertThat(result).isEmpty();
     }
 
     @Test
-    @DisplayName("파일 수정(추가 업로드) 테스트")
-    void updateFiles_Success() throws IOException {
-        // Given
-        MultipartFile newFile = mock(MultipartFile.class);
-        when(newFile.isEmpty()).thenReturn(false);
-        when(newFile.getOriginalFilename()).thenReturn("new.txt");
-        when(newFile.getSize()).thenReturn(200L);
-
-        when(fileMasterRepository.findById(atchFileId)).thenReturn(Optional.of(mockMaster));
-        when(fileDetailRepository.findByFileMaster(mockMaster)).thenReturn(List.of(mockDetail));
-        when(storageService.store(any(), anyString())).thenReturn("stored_new.txt");
-
-        // When
-        fileService.updateFiles(atchFileId, List.of(newFile));
-
-        // Then
-        verify(fileDetailRepository).save(argThat(detail -> detail.getFileSn() == 2));
+    @DisplayName("파일 목록 조회 - 마스터 정보가 없는 경우 예외 발생")
+    void getFileList_NotFound() {
+        given(fileMasterRepository.findById(anyString())).willReturn(Optional.empty());
+        assertThatThrownBy(() -> fileService.getFileList("FILE_MISSING"))
+                .isInstanceOf(BusinessException.class);
     }
 
     @Test
-    @DisplayName("전체 파일 목록 조회 테스트 - 키워드 필터링")
-    void getAllFileList_WithKeyword_Success() {
-        // Given
-        org.springframework.data.domain.Pageable pageable = mock(org.springframework.data.domain.Pageable.class);
-        org.springframework.data.domain.Page<FileDetail> page = new org.springframework.data.domain.PageImpl<>(List.of(mockDetail));
-        when(fileDetailRepository.findByOrignlFileNmContaining(eq("test"), any())).thenReturn(page);
-
-        // When
-        org.springframework.data.domain.Page<FileDto> result = fileService.getAllFileList(pageable, "test");
-
-        // Then
-        assertThat(result.getContent()).hasSize(1);
+    @DisplayName("파일 리소스 조회 - 상세 정보가 없는 경우 예외 발생")
+    void getFileResource_NotFound() {
+        given(fileDetailRepository.findById(any())).willReturn(Optional.empty());
+        assertThatThrownBy(() -> fileService.getFileResource("FILE_123", 1))
+                .isInstanceOf(BusinessException.class);
     }
 
     @Test
-    @DisplayName("전체 파일 목록 조회 테스트 - 전체 조회")
-    void getAllFileList_NoKeyword_Success() {
-        // Given
-        org.springframework.data.domain.Pageable pageable = mock(org.springframework.data.domain.Pageable.class);
-        org.springframework.data.domain.Page<FileDetail> page = new org.springframework.data.domain.PageImpl<>(List.of(mockDetail));
-        when(fileDetailRepository.findAll(any(org.springframework.data.domain.Pageable.class))).thenReturn(page);
+    @DisplayName("파일 업로드 - 빈 파일 포함 시 스킵")
+    void uploadFiles_WithEmptyFile() throws IOException {
+        MockMultipartFile emptyFile = new MockMultipartFile("files", "empty.jpg", "image/jpeg", new byte[0]);
+        MockMultipartFile validFile = new MockMultipartFile("files", "valid.jpg", "image/jpeg", "content".getBytes());
+        
+        FileMaster master = new FileMaster("FILE_123");
+        given(fileMasterRepository.save(any())).willReturn(master);
+        given(storageService.store(any(), anyString())).willReturn("stored.jpg");
 
-        // When
-        org.springframework.data.domain.Page<FileDto> result = fileService.getAllFileList(pageable, null);
+        fileService.uploadFiles(List.of(emptyFile, validFile));
 
-        // Then
-        assertThat(result.getContent()).hasSize(1);
+        verify(storageService, times(1)).store(any(), anyString());
+    }
+
+    @Test
+    @DisplayName("파일 업로드 - 확장자 없는 파일 업로드 시 예외 발생")
+    void uploadFiles_NoExtension() {
+        MockMultipartFile file = new MockMultipartFile("files", "noextension", "application/octet-stream", "content".getBytes());
+        assertThatThrownBy(() -> fileService.uploadFiles(List.of(file)))
+                .isInstanceOf(BusinessException.class);
+    }
+
+    @Test
+    @DisplayName("파일 수정 - 기존 파일이 없는 경우 Sn이 1부터 시작")
+    void updateFiles_NoExistingDetails() throws IOException {
+        String atchFileId = "FILE_123";
+        FileMaster master = new FileMaster(atchFileId);
+        MockMultipartFile file = new MockMultipartFile("files", "new.jpg", "image/jpeg", "content".getBytes());
+
+        given(fileMasterRepository.findById(atchFileId)).willReturn(Optional.of(master));
+        given(fileDetailRepository.findByFileMaster(master)).willReturn(List.of());
+        given(storageService.store(any(), anyString())).willReturn("stored.jpg");
+
+        fileService.updateFiles(atchFileId, List.of(file));
+
+        verify(fileDetailRepository).save(argThat(d -> d.getFileSn() == 1));
+    }
+
+    @Test
+    @DisplayName("전체 파일 목록 조회 - 키워드 포함")
+    void getAllFileList_WithKeyword() {
+        org.springframework.data.domain.Pageable pageable = org.springframework.data.domain.PageRequest.of(0, 10);
+        given(fileDetailRepository.findByOrignlFileNmContaining(eq("key"), any())).willReturn(org.springframework.data.domain.Page.empty());
+
+        fileService.getAllFileList(pageable, "key");
+
+        verify(fileDetailRepository).findByOrignlFileNmContaining(eq("key"), any());
+    }
+
+    @Test
+    @DisplayName("전체 파일 목록 조회 - 키워드 미포함")
+    void getAllFileList_NoKeyword() {
+        org.springframework.data.domain.Pageable pageable = org.springframework.data.domain.PageRequest.of(0, 10);
+        given(fileDetailRepository.findAll(any(org.springframework.data.domain.Pageable.class))).willReturn(org.springframework.data.domain.Page.empty());
+
+        fileService.getAllFileList(pageable, null);
+
+        verify(fileDetailRepository).findAll(any(org.springframework.data.domain.Pageable.class));
     }
 }
